# biodraft

./: .gitignore  Man_Mesh_template.blend  Man_Mesh_template.blend1  PROBLEMS.md  README.md  REFACTOR_CANVAS.md  blender_code.py  index.html  issues.md  layers.md  package-lock.json  package.json  patterns_with_handles (1).json  patterns_with_handles (2).json  patterns_with_handles (3).json  patterns_with_handles (4).json  patterns_with_handles (5).json  patterns_with_handles (6).json  patterns_with_handles (7).json  patterns_with_handles (8).json  patterns_with_handles.json  vite.config.ts
.gemini/: GEMINI.md
JSON_3D_CONVERTER/: Show2D.py  checkpoint.py  checkpoint2.py  checkpoint3.py  checkpoint4.py  checkpoint5.py  checkpoint6.py  checkpoint7.py  data.json  dataa.json  main.py  test.py
biomesh-render-server/: package-lock.json  package.json  server.js
biomesh-render-server/scripts/: render_bbox_front_back.py
cloth-ammo/: cloth_hs.json  computeOld.js  hs.json  index.html  patterns.json  patterns_with_seams.json  sphere.html  structure.md  test.json  todo
cloth-ammo/__MACOSX/: ._hs.json  ._index.html
cloth-ammo/js/: clothHelpers.js  clothSimulation.js  collisionBuilder.js  compute.js  compute2.js  config.js  human.js  loop.js  main.js  physicsManager.js  threeManager.js  (+2 more)
cloth-engine/: Cargo.toml
cloth-engine/src/: lib.rs  physics.rs
exampleJson/: patterns_with_seams_and_textures (5).json
quad_swords/: __init__.py  quad_swords.py
scripts/: serve-prototype.cjs  serve-prototype.js
src/: App.tsx  index.css  main.tsx
todo/: layers.md  settings.md
(+198 files in other folders)
