[package]
name = "cloth-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
earcutr = "0.1"         # Ear‐clipping‐Tesselator
nalgebra = "0.30"       # Für Vektorrechnung

[lib]
crate-type = ["cdylib", "rlib"]