[package]
name = "cloth-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
earcutr = "0.1"         # Ear‐clipping‐Tesselator
delaunator = "0.2"
nalgebra   = "0.32"

[lib]
crate-type = ["cdylib", "rlib"]